# PhonemesRevisited

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  makeDevEnv.bat
Phonemes/: phonemes.json
Source/: CMakeLists.txt  PhonemeIdentification.cpp  PhonemeIdentification.h  VisemeAnimatedMesh.cpp  VisemeAnimatedMesh.h  main.cpp  main.h
Submodules/: CMakeLists.txt
Visemes/: Ah.viseme  Silence.viseme  visemes.json
